lang/tests/contract/ui/fail/17-invalid-return-type.stderr
error[E0277]: the trait bound `I: You_Should_Use_An_Valid_Output_Type` is not satisfied
 --> tests/contract/ui/fail/17-invalid-return-type.rs:6:1
  |
6 | #[liquid::contract]
  | ^^^^^^^^^^^^^^^^^^^ the trait `You_Should_Use_An_Valid_Output_Type` is not implemented for `I`
  |
  = help: the following other types implement trait `You_Should_Use_An_Valid_Output_Type`:
            ()
            (T0, T1, T2, T3, T4, T5, T6, T7, T8, T9, T10, T11, T12, T13, T14, T15, T16, T17)
            (T1, T2, T3, T4, T5, T6, T7, T8, T9, T10, T11, T12, T13, T14, T15, T16, T17)
            (T10, T11, T12, T13, T14, T15, T16, T17)
            (T11, T12, T13, T14, T15, T16, T17)
            (T12, T13, T14, T15, T16, T17)
            (T13, T14, T15, T16, T17)
            (T14, T15, T16, T17)
          and $N others
  = note: this error originates in the attribute macro `liquid::contract` (in Nightly builds, run with -Z macro-backtrace for more info)
